# fastbirefstereo

./: CMakeLists.txt  LICENSE  README.md
resources/: b_e2d_1.exr  b_e2d_2.exr  b_o2d_2.exr  inv_ind1.exr  inv_ind2.exr
src/: bilateral_filter.cl  depth_estimator.cpp  depth_estimator.h  main_demo.cpp  main_rectification.cpp  rectifier.cpp  rectifier.h
